Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74854

/3rdparty/chromium/net/third_party/quic/core/qpack/qpack_header_table.cc(111): error C2398: Element '4': conversion from 'const uint64_t' to 'size_t' requires a narrowing conversion

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.13.0 Beta2
    • 5.13.0 Beta2
    • WebEngine
    • None
    • Windows
    • 6c2d06e606435acd04f94f8b0e72dd6c955db30d (qt/qtwebengine-chromium/73-based) de97de4893b73a0f65f04a84b529e9648902941b (qt/qtwebengine-chromium/75-based) 557d96c7cc96a8bb36954e3102a8872aa479ea78 (qt/qtwebengine-chromium/77-based)

      There seems to be new issue with qtwebengine when trying to update Update Windows 10, MSVC 2015 and MSVC 2017, see https://codereview.qt-project.org/#/c/239100/

       

      from build log:

      agent:2019/04/01 04:56:55 build.go:192: [10178/26179] CXX obj/net/net/qpack_header_table.obj
      agent:2019/04/01 04:56:55 build.go:192: FAILED: obj/net/net/qpack_header_table.obj
      agent:2019/04/01 04:56:55 build.go:192: ninja t msvc -e environment.x86 – "C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.15.26726\bin\HostX64\x86/cl.exe" /nologo /showIncludes -DUSE_AURA=1 -DNO_TCMALLOC -DOFFICIAL_BUILD -DCHROMIUM_BUILD -DTOOLKIT_QT -D_HAS_EXCEPTIONS=0 -D_STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -D_USING_V110_SDK71 -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=0x0A000002 -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DDLOPEN_KERBEROS -DNET_IMPLEMENTATION -DENABLE_BUILT_IN_DNS -DU_USING_ICU_NAMESPACE=0 -DU_ENABLE_DYLOAD=0 -DUSE_CHROMIUM_ICU=1 -DU_STATIC_IMPLEMENTATION -DICU_UTIL_DATA_IMPL=ICU_UTIL_DATA_FILE -DUCHAR_TYPE=wchar_t -Igen -I../../3rdparty/chromium -I../../3rdparty/chromium/third_party/protobuf/src -Igen/protoc_out -I../../3rdparty/chromium/third_party/protobuf/src -I../../3rdparty/chromium/third_party/boringssl/src/include -I../../3rdparty/chromium/third_party/zlib -I../../3rdparty/chromium/third_party/ced/src -I../../3rdparty/chromium/third_party/icu/source/common -I../../3rdparty/chromium/third_party/icu/source/i18n -I../../3rdparty/chromium/third_party/brotli/include /utf-8 /Gy /FS /bigobj /d2FastFail /Zc:sizedDealloc /W4 /wd4091 /wd4127 /wd4251 /wd4275 /wd4312 /wd4324 /wd4351 /wd4355 /wd4503 /wd4589 /wd4611 /wd4100 /wd4121 /wd4244 /wd4505 /wd4510 /wd4512 /wd4610 /wd4838 /wd4995 /wd4996 /wd4456 /wd4457 /wd4458 /wd4459 /wd4200 /wd4201 /wd4204 /wd4221 /wd4245 /wd4267 /wd4305 /wd4389 /wd4702 /wd4701 /wd4703 /wd4661 /wd4706 /wd4715 /wd4267 /O1 /Ob2 /Oy- /Zc:inline /Gw /Oi /MD /FIbuild/precompile.h /Fpobj/net/net_cc.pch /Yubuild/precompile.h /TP /wd4577 /GR- /c ../../3rdparty/chromium/net/third_party/quic/core/qpack/qpack_header_table.cc /Foobj/net/net/qpack_header_table.obj /Fd"obj/net/net_cc.pdb"
      agent:2019/04/01 04:56:55 build.go:192: ../../3rdparty/chromium/net/third_party/quic/core/qpack/qpack_header_table.cc(111): error C2398: Element '4': conversion from 'const uint64_t' to 'size_t' requires a narrowing conversion

        For Gerrit Dashboard: QTBUG-74854
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes