Fix Windows 32bit build

Change-Id: I55fa0294454a4b5a9bc2ac4d103b001a55d380a3
Fixes: QTBUG-74854
Reviewed-by: Kai Koehne <kai.koehne@qt.io>